--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "author": "Maykon Luís Capellari <maykonluiscapellari@gmail.com>",
   "license": "ISC",
   "dependencies": {
+    "@maykoncapellari/cli-builder": "^1.0.11",
     "csv-parse": "^5.5.3"
   }
 }
