implement project newest (purchase order files)

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "type": "module",
   "private": false,
   "scripts": {
-    "start": "node src/index.js"
+    "start": "node --env-file .env src/index.js",
+    "debug": "node --inspect --env-file .env src/index.js"
   },
   "keywords": [
     "nodejs",
