--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,7 @@ node_modules/
 .env.test
 .env.dev
 .env.prod
+.env*
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
@@ -28,3 +29,4 @@ node_modules/
 
 # CSVs
 *.csv
+exported/
